--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=andypalma1111@gmail.com
-EMAIL_HOST_PASSWORD=cqco pleg nmkj seyz
+EMAIL_HOST_USER=garciacleiber09@gmail.com
+EMAIL_HOST_PASSWORD=ivtp dzch rdxn dkhf
