--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
+EMAIL_USE_SSL=False
 # EMAIL_HOST_USER=garciacleiber09@gmail.com
 # EMAIL_HOST_PASSWORD=ivtp dzch rdxn dkhf
 EMAIL_HOST_USER=upt.barinas.jose.felix.ribas@gmail.com
-EMAIL_HOST_PASSWORD=cchl qtat frgr rsag
+EMAIL_HOST_PASSWORD=cchlqtatfrgrrsag
