--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_USE_SSL=False
 # EMAIL_HOST_USER=garciacleiber09@gmail.com
-# EMAIL_HOST_PASSWORD=ivtp dzch rdxn dkhf
+# DEFAULT_FROM_EMAIL=garciacleiber09@gmail.com
+# EMAIL_HOST_PASSWORD=ipwvezjfyxubgtok
 EMAIL_HOST_USER=upt.barinas.jose.felix.ribas@gmail.com
 EMAIL_HOST_PASSWORD=cchlqtatfrgrrsag
