--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,25 @@
 asgiref==3.8.1
 bcrypt==4.3.0
+charset-normalizer==3.4.4
+colorama==0.4.6
+decorator==5.2.1
 Django==5.2.3
 django-axes==8.0.0
 django-stubs==5.2.1
 django-stubs-ext==5.2.1
+et_xmlfile==2.0.0
+ImageIO==2.37.2
+imageio-ffmpeg==0.6.0
+moviepy==2.2.1
+numpy==2.3.4
+openpyxl==3.1.5
 pillow==11.2.1
+proglog==0.1.12
 python-dotenv==1.1.0
+reportlab==4.4.5
 sqlparse==0.5.3
+tqdm==4.67.1
 types-PyYAML==6.0.12.20250516
 typing_extensions==4.14.0
 tzdata==2025.2
 waitress==3.0.2
-moviepy==1.0.4
-imageio-ffmpeg==0.4.10
